# Flappy-Bird-Game

./: CMakeLists.txt  README.md  icon.rc  main.cpp
core/physics/: detections.cpp  detections.hpp
core/renderer/: Renderer.cpp  Renderer.hpp
core/window/: Window.cpp  Window.hpp
docs/: DRAGGING.md  GENERATION.md  MOVMENTS.md
games/flappy_bird/: flappy.cpp  flappy.hpp
lib/x64/: project_zurd.lib
maps/: SpaceBackground.cpp  SpaceBackground.hpp
objects/: Sprite.cpp  Sprite.h
objects/Shapes/: CircleRectShape.cpp  CircleRectShape.hpp  RectangleShape.cpp  RectangleShape.hpp
objects/enemy/: astroids.cpp  astroids.hpp
objects/player2D/: Player2D.cpp  Player2D.hpp
ui/: Button.cpp  Button.h  Display.cpp  Display.hpp  Text.cpp  Text.h
